# Starcraft-2-Reinforcement-Learning

./: .gitignore  LICENSE  README.md  pyproject.toml  results.txt  rl_bot_script.py  sc2-bot.py  sc2env.py  state_rwd_action.pkl  traina2c.py  trainppo.py
sc2_rl/: load-train-mlpp.py  main.py  rl_bot_script.py  sc2-bot-test-actions.py  trainppo.py
